all api templates
